--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
     <main class="container">
     
     	<!-- discover section -->
-        <section class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3 order-sm-last">
-                <h2 class="text-sm-end">Discover & Review</h2>
-            </div>
-            <div class="col">
-                <h3>Our Campsites</h3>
-                <p>Explore our growing database of curated campsites and leave your own reviews!</p>
-            </div>
-        </section>
+       <section class="row row-content align-items-center">
+    <div class="col-sm-4 col-md-3 order-sm-last">
+        <h2 class="text-sm-end">Discover & Review</h2>
+    </div>
+    <div class="col">
+        <h3>Our Campsites</h3>
+        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
+    </div>
+</section>
 
 		<!-- feature section -->
         <section class="row row-content align-items-center">
@@ -50,7 +50,7 @@
             </div>
             <div class="col">
                 <h3>React Lake Campground</h3>
-                <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
             </div>
         </section>
 
@@ -61,7 +61,7 @@
             </div>
             <div class="col">
                 <h3>Bootstrap Outfitters</h3>
-                <p>Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
+                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
             </div>
         </section>
         
@@ -75,7 +75,7 @@
                     <h5>Links</h5>
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Sites</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
