--- a/aboutus.html
+++ b/aboutus.html
@@ -27,9 +27,32 @@
         </div>
     </header>
 
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <div class="container">
+        
+        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#nucampNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="nucampNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link active" href="aboutus.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Sites</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+            </div>
+            
+        </div>
+        </div>
+    </nav>
+
     <main class="container">
         <div class="row row-content">
             <div class="col">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item active">About</li>
+                 </ol>
                 <h2>About Us</h2>
                 <hr />
             </div>
