--- a/aboutus.html
+++ b/aboutus.html
@@ -7,6 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css" />
@@ -29,19 +34,25 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-        
-        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#nucampNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="nucampNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link active" href="aboutus.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Sites</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-            </ul>
+
+            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                data-bs-target="#nucampNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="nucampNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa-solid fa-house fa-lg"></i>
+                            Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#"><i class="fa-solid fa-info fa-lg"></i>
+                            About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-list fa-lg"></i> Sites</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-address-card fa-lg"></i>
+                            Contact</a></li>
+
+                </ul>
             </div>
-            
+
         </div>
         </div>
     </nav>
@@ -52,7 +63,7 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item active">About</li>
-                 </ol>
+                </ol>
                 <h2>About Us</h2>
                 <hr />
             </div>
@@ -78,13 +89,17 @@
                 <div class="col">
                     <h3>Community Partners</h3>
                     <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
-                    <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
+                    <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you
+                        can't beat.</p>
                     <h4>Git Out Expeditions <small>Group Adventure Expeditions</small></h4>
-                    <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
+                    <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other
+                        adventurers!</p>
                     <h4>Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small></h4>
-                    <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
+                    <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by
+                        Mongo Fly Shop.</p>
                     <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
-                    <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you
+                    <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to
+                        Node will be sure to get you
                         covered.</p>
                 </div>
             </div>
@@ -106,14 +121,15 @@
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                    <a href="http://instagram.com/">Instagram</a>
-                    <a href="http://facebook.com/">Facebook</a>
-                    <a href="http://twitter.com/">Twitter</a>
-                    <a href="http://youtube.com/">YouTube</a>
+                    <a href="http://instagram.com/"><i class="fa-brands fa-instagram fa-xl"></i></a>
+                    <a href="http://facebook.com/"><i class="fa-brands fa-facebook fa-xl"></i></a>
+                    <a href="http://twitter.com/"><i class="fa-brands fa-twitter fa-xl"></i></a>
+                    <a href="http://youtube.com/"><i class="fa-brands fa-youtube fa-xl"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    Tel: 1-206-555-1234<br />
-                    Email: campsites@nucamp.co
+                    <i class="fa-solid fa-phone fa-lg text-primary"></i> 1-206-555-1234
+                    <br />
+                    <i class="fa-solid fa-envelope fa-lg text-primary"></i> campsites@nucamp.co
                 </div>
             </div>
         </div>
