--- a/aboutus.html
+++ b/aboutus.html
@@ -47,7 +47,7 @@
                             About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-list fa-lg"></i> Sites</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-address-card fa-lg"></i>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa-solid fa-address-card fa-lg"></i>
                             Contact</a></li>
 
                 </ul>
@@ -116,7 +116,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Sites</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
