--- a/aboutus.html
+++ b/aboutus.html
@@ -69,20 +69,45 @@
             </div>
         </div>
 
-        <section>
-            <div class="row row-content">
-                <div class="col-sm-6">
-                    <h3>Our Mission</h3>
-                    <p>We present a curated database of the best campsites in the vast woods and backcountry of the
-                        World Wide Web Wilderness. We increase access
-                        to adventure for the public while promoting safe and respectful use of resources. The expert
-                        wilderness trekkers on our staff personally verify each
-                        campsite to make sure that they are up to our standards. We also present a platform for campers
-                        to share reviews on campsites they have visited
-                        with each other.</p>
+        <section class="row row-content">
+            <div class="col-sm-6">
+                <h3>Our Mission</h3>
+                <p>We present a curated database of the best campsites in the vast woods and backcountry of the World
+                    Wide Web Wilderness. We increase access to adventure for the public while promoting safe and
+                    respectful use of resources. The expert wilderness trekkers on our staff personally verify each
+                    campsite to make sure that they are up to our standards. We also present a platform for campers to
+                    share reviews on campsites they have visited with each other.</p>
+            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
+                    <div class="card-body">
+                        <dl class="row">
+                            <dt class="col-6">Founded</dt>
+                            <dd class="col-6">February 3, 2016</dd>
+                            <dt class="col-6">No. of Campsites in 2022</dt>
+                            <dd class="col-6">563</dd>
+                            <dt class="col-6">No. of Reviews in 2022</dt>
+                            <dd class="col-6">4388</dd>
+                            <dt class="col-6">Employees</dt>
+                            <dd class="col-6">42</dd>
+                        </dl>
+                    </div>
                 </div>
             </div>
-        </section>
+            <div class="col">
+                <div class="card bg-light mt-3">
+                    <figure class="card-body">
+                        <blockquote class="blockquote">
+                            <q>I will not follow where the path may lead, but I will go where there is no path, and I will leave a trail.</q> 
+                        </blockquote>
+                        <figcaption class="blockquote-footer"> 
+                            Muriel Strode <cite>"Wind-Wafted Wild Flowers" - The Open Court, Vol. 1903</cite>
+                        </figcaption>
+                   </figure>
+                </div>
+            </div>   
+        </section>  
 
         <section>
             <div class="row row-content">
@@ -104,7 +129,42 @@
                 </div>
             </div>
         </section>
-
+        <div class="col-sm-9">
+           
+            <h2>Facts & Figures</h2>
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead class="bg-primary text-light">
+                        <tr>
+                            <th></th>
+                            <th>2020</th>
+                            <th>2021</th>
+                            <th>2022</th>
+                        </tr>
+                    </thead>
+                    <tbody class="table-primary">
+                        <tr>
+                            <th>Staff Wilderness Experts</th>
+                            <td>10</td>
+                            <td>20</td>
+                            <td>40</td>
+                        </tr>
+                        <tr>
+                            <th>New Campers</th>
+                            <td>256</td>
+                            <td>1,280</td>
+                            <td>5,360</td>
+                        </tr>
+                        <tr>
+                            <th>Square Miles Covered</th>
+                            <td>101,325</td>
+                            <td>423,000</td>
+                            <td>~3,000,000,000</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </main>
 
     <footer>
