--- a/aboutus.html
+++ b/aboutus.html
@@ -24,6 +24,9 @@
     <header>
         <div class="container">
             <div class="row">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <a href="index.html"><img src="img/logo.png" class="img-fluid" /></a>
+                </div>
                 <div class="col">
                     <h1>Nucamp</h1>
                     <h2>a better way to camp</h2>
@@ -34,7 +37,8 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" /></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nucampNavbar">
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                 data-bs-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -134,7 +138,7 @@
             <h2>Facts & Figures</h2>
             <div class="table-responsive">
                 <table class="table table-striped">
-                    <thead class="bg-primary text-light">
+                    <thead class="bg-primary text-light ">
                         <tr>
                             <th></th>
                             <th>2020</th>
