--- a/aboutus.html
+++ b/aboutus.html
@@ -123,30 +123,58 @@
 
         <section>
             <h3>Community Partners</h3>
-            <div class="nav nav-tabs" role="tablist">
-                <a class="nav-link active" id="bootstrap-tab" data-bs-toggle="tab" href="#bootstrap" role="tab">Bootstrap Outfitters</a>
-                <a class="nav-link" id="git-tab" data-bs-toggle="tab" href="#git" role="tab">Git Out Expeditions</a>
-                <a class="nav-link" id="mongo-tab" data-bs-toggle="tab" href="#mongo" role="tab">Mongo Fly Shop</a>
-                <a class="nav-link" id="node-tab" data-bs-toggle="tab" href="#node" role="tab">Node Outdoor Apparel</a>
-            </div>
-            <div class="tab-content">
-                <div class="tab-pane fade show active" id="bootstrap" role="tabpanel">
-                    <h4>Bootstrap Outfitters<small>Outdoor Gear Specialists</small></h4>
-                    <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
+            <section>
+                <div id="accordionExample" class="accordion">
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#bootstrap">
+                                Bootstrap Outfitters
+                            </button>
+                        </h4>
+                        <div id="bootstrap" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                            <div class="accordion-body d-none d-sm-block">
+                                <p>Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#git">
+                                Git Out Expeditions
+                            </button>
+                        </h4>
+                        <div id="git" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body d-none d-sm-block">
+                                <p>Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mongo">
+                                Mongo Fly Shop
+                            </button>
+                        </h4>
+                        <div id="mongo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body d-none d-sm-block">
+                                <p>Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#node">
+                                Node Outdoor Apparel
+                            </button>
+                        </h4>
+                        <div id="node" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body d-none d-sm-block">
+                                <p>From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="tab-pane fade" id="git" role="tabpanel">
-                    <h4>Git Out Expeditions<small>Group Adventure Expeditions</small></h4>
-                    <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
-                </div>
-                <div class="tab-pane fade" id="mongo" role="tabpanel">
-                    <h4>Mongo Fly Shop<small>Your Neighborhood Fly Fishing Shop.</small></h4>
-                    <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
-                </div>
-                <div class="tab-pane fade" id="node" role="tabpanel">
-                    <h4>Node Outdoor Apparel<small>Outdoor Clothes & Shoes</small></h4>
-                    <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
-                </div>
-            </div>
+            </section>
         </section>
         <div class="col-sm-9">
 
