--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 text-end mt-4">
-                    <a href="#reserveForm" class="btn bg-info" style="color: white !important;">Reserve Campsite</a>
-
+                    <button class="btn bg-info text-white" data-bs-toggle="modal" data-bs-target="#reserveModal">Reserve Campsite</button>
                 </div>
             </div>
         </div>
@@ -47,7 +46,6 @@
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" alt="tiny logo" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nucampNavbar">
-
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
@@ -60,62 +58,102 @@
                     </li>
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i
                                 class="fa-solid fa-address-card fa-lg"></i> Contact</a></li>
-
-                
-                            </ul>
-                            <span class="navbar-text ms-auto">
-                                <a role="button" data-bs-toggle="modal" data-bs-target="#loginModal">
-                                    <i class="fa-solid fa-right-to-bracket"></i> Login
-                                </a>
-                            </span>
+                </ul>
+                <span class="navbar-text ms-auto">
+                    <a role="button" data-bs-toggle="modal" data-bs-target="#loginModal">
+                        <i class="fa-solid fa-right-to-bracket"></i> Login
+                    </a>
+                </span>
             </div>
         </div>
-
-
-        
     </nav>
-<!-- login modal -->
-<div class="modal fade" id="loginModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3 class="modal-title">Login</h3>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="container-fluid">
-                    <form>
-                        <div class="row">
-                            <div class="mb-3 col-12">
-                                <label class="sr-only" for="loginEmail">Email address</label>
-                                <input type="email" class="form-control form-control-sm" id="loginEmail"
-                                    placeholder="Enter email">
-                            </div>
-                            <div class="mb-3 col-12">
-                                <label class="sr-only" for="loginPassword">Password</label>
-                                <input type="password" class="form-control form-control-sm" id="loginPassword"
-                                    placeholder="Password">
-                            </div>
-                            <div class="col">
-                                <div class="form-check mb-3">
-                                    <input class="form-check-input" type="checkbox">
-                                    <label class="form-check-label"> Remember me</label>
+
+    <!-- login modal -->
+    <div class="modal fade" id="loginModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title">Login</h3>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <form>
+                            <div class="row">
+                                <div class="mb-3 col-12">
+                                    <label class="sr-only" for="loginEmail">Email address</label>
+                                    <input type="email" class="form-control form-control-sm" id="loginEmail"
+                                        placeholder="Enter email">
+                                </div>
+                                <div class="mb-3 col-12">
+                                    <label class="sr-only" for="loginPassword">Password</label>
+                                    <input type="password" class="form-control form-control-sm" id="loginPassword"
+                                        placeholder="Password">
+                                </div>
+                                <div class="col">
+                                    <div class="form-check mb-3">
+                                        <input class="form-check-input" type="checkbox">
+                                        <label class="form-check-label"> Remember me</label>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <button type="button" class="btn btn-secondary"
-                                    data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
+                            <div class="row">
+                                <div class="col">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <!-- Reserve modal -->
+    <div class="modal fade" id="reserveModal" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header bg-info text-white">
+                    <h3 class="modal-title">Reserve a Campsite</h3>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <form>
+                            <div class="row">
+                                <label for="campers" class="col-form-label col-sm-4">Number of Campers</label>
+                                <div class="col-sm-8">
+                                    <select class="form-control" id="campers" name="campers">
+                                        <option>Select...</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <label for="date" class="col-form-label col-sm-4">Date</label>
+                                <div class="col-sm-8">
+                                    <input type="date" class="form-control" id="date" name="date">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- main section -->
     <main class="container">
 
@@ -168,50 +206,6 @@
                         <h3>Bootstrap Outfitters</h3>
                         <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you
                             can't beat.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="row row-content">
-            <div class="col-9 mx-auto">
-                <!-- Reservation Form Card -->
-                <div class="card">
-                    <!-- Card Header -->
-                    <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
-                    <!-- Card Body -->
-                    <div class="card-body">
-                        <!-- Form -->
-                        <form>
-                            <!-- Row 1: Number of Campers -->
-                            <div class="row mb-3">
-                                <label for="campers" class="col-form-label col-sm-4">Number of Campers</label>
-                                <div class="col-sm-8">
-                                    <select class="form-control" id="campers" name="campers">
-                                        <option>Select...</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <!-- Row 2: Date -->
-                            <div class="row mb-3">
-                                <label for="date" class="col-form-label col-sm-4">Date</label>
-                                <div class="col-sm-8">
-                                    <input type="date" class="form-control" id="date" name="date">
-                                </div>
-                            </div>
-                            <!-- Row 3: Search Button -->
-                            <div class="row">
-                                <div class="col">
-                                    <button type="submit" class="btn btn-primary" id="reserveForm">Reserve a Campsight</button>
-                                </div>
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
