node.js migrate

--- a/aboutus.html
+++ b/aboutus.html
@@ -2,15 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/fontawesome.css" />
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/brands.css" />
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/solid.css" />
 
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
@@ -86,7 +87,7 @@
                     share reviews on campsites they have visited with each other.</p>
             </div>
 
-           
+
 
 
             <div class="col-sm-6">
@@ -127,49 +128,57 @@
                 <div id="accordionExample" class="accordion">
                     <div class="accordion-item">
                         <h4 class="accordion-header">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#bootstrap">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#bootstrap">
                                 Bootstrap Outfitters
                             </button>
                         </h4>
                         <div id="bootstrap" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                             <div class="accordion-body d-none d-sm-block">
-                                <p>Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
+                                <p>Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h4 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#git">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#git">
                                 Git Out Expeditions
                             </button>
                         </h4>
                         <div id="git" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body d-none d-sm-block">
-                                <p>Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
+                                <p>Join Git Out Expeditions to explore new horizons with a group of other adventurers!
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h4 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mongo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#mongo">
                                 Mongo Fly Shop
                             </button>
                         </h4>
                         <div id="mongo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body d-none d-sm-block">
-                                <p>Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
+                                <p>Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h4 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#node">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#node">
                                 Node Outdoor Apparel
                             </button>
                         </h4>
                         <div id="node" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body d-none d-sm-block">
-                                <p>From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
+                                <p>From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure
+                                    to get you covered.</p>
                             </div>
                         </div>
                     </div>
@@ -214,6 +223,8 @@
         </div>
     </main>
 
+
+
     <footer>
         <div class="container">
             <div class="row">
@@ -241,9 +252,11 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+
+    <!-- Bootstrap JavaScript plugins -->
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+
 </body>
+
 
 </html>
