--- a/contactus.html
+++ b/contactus.html
@@ -7,18 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
-    <!-- Additional CSS must be placed after Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/fontawesome.css" />
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/brands.css" />
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/solid.css" />
+
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css" />
+
     <title>Nucamp: A Better Way To Camp</title>
 </head>
-
 <body>
 
     <!-- header -->
@@ -41,26 +41,29 @@
         <div class="container">
             <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nucampNavbar">
-            <button class="navbar-toggler ml-auto" type="button" data-bs-toggle="collapse"
-                data-bs-target="#nucampNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="nucampNavbar">
-                <ul class="navbar-nav">
+                <button class="navbar-toggler ml-auto" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#nucampNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="nucampNavbar">
+                    <ul class="navbar-nav">
 
-                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a>
-                    </li>
+                        <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i>
+                                Home</a>
+                        </li>
 
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i>
-                            About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i>
+                                About</a></li>
 
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a>
+                        </li>
 
-                    <li class="nav-item"><a class="nav-link active" href="#"><i class="fa fa-address-card fa-lg"></i>
-                            Contact</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#"><i
+                                    class="fa fa-address-card fa-lg"></i>
+                                Contact</a></li>
 
-                </ul>
-            </div>
+                    </ul>
+                </div>
         </div>
     </nav>
 
@@ -106,19 +109,22 @@
                     <div class="row mb-3">
                         <label for="firstName" class="col-md-2 col-form-label">First Name</label>
                         <div class="col-md-10">
-                            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
+                            <input type="text" class="form-control" id="firstName" name="firstName"
+                                placeholder="First Name">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="lastName" class="col-md-2 col-form-label">Last Name</label>
                         <div class="col-md-10">
-                            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
+                            <input type="text" class="form-control" id="lastName" name="lastName"
+                                placeholder="Last Name">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="areaCode" class="col-md-2 col-form-label">Contact Tel.</label>
                         <div class="col-5 col-md-3">
-                            <input type="tel" class="form-control" id="areaCode" name="areaCode" placeholder="Area code">
+                            <input type="tel" class="form-control" id="areaCode" name="areaCode"
+                                placeholder="Area code">
                         </div>
                         <div class="col">
                             <input type="tel" class="form-control" name="telNum" placeholder="Tel. number">
@@ -134,11 +140,13 @@
                         <div class="col offset-md-2">
                             May we contact you?
                             <div class="form-check form-check-inline">
-                                <input type="radio" class="form-check-input" id="contactYes" name="contactRadios" value="yes">
+                                <input type="radio" class="form-check-input" id="contactYes" name="contactRadios"
+                                    value="yes">
                                 <label for="contactYes" class="form-check-label">Yes</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input type="radio" class="form-check-input" id="contactNo" name="contactRadios" value="no">
+                                <input type="radio" class="form-check-input" id="contactNo" name="contactRadios"
+                                    value="no">
                                 <label for="contactNo" class="form-check-label">No</label>
                             </div>
                         </div>
@@ -155,8 +163,8 @@
                         </div>
                     </div>
                 </form>
+            </div>
         </div>
-    </div>
 
     </div>
 
@@ -187,10 +195,9 @@
         </div>
     </footer>
 
-    <!-- Bootstrap JavaScript plugins-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+
+    <!-- Bootstrap JavaScript plugins -->
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 
 </body>
 
